--- a/package.json
+++ b/package.json
@@ -9,18 +9,59 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@kinde-oss/kinde-auth-nextjs": "^2.2.3",
+    "@langchain/openai": "^0.0.28",
+    "@langchain/pinecone": "^0.0.4",
+    "@mantine/hooks": "^7.8.1",
+    "@pinecone-database/pinecone": "^2.2.0",
+    "@prisma/client": "^5.12.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tailwindcss/typography": "^0.5.12",
+    "@tanstack/react-query": "^5.29.2",
+    "@trpc/client": "^11.0.0-rc.347",
+    "@trpc/next": "^11.0.0-rc.347",
+    "@trpc/react-query": "^11.0.0-rc.347",
+    "@trpc/server": "^11.0.0-rc.347",
+    "@uploadthing/react": "^6.4.4",
+    "ai": "^3.0.34",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "langchain": "^0.1.36",
+    "lucide-react": "^0.372.0",
+    "next": "14.2.1",
+    "openai": "^4.38.5",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.51.3",
+    "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^9.0.1",
+    "react-pdf": "^7.7.1",
+    "react-resize-detector": "^10.0.1",
+    "react-textarea-autosize": "^8.5.3",
+    "simplebar-react": "^3.2.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.9.0",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "eslint-config-next": "14.2.1",
+    "postcss": "^8",
+    "prisma": "^5.12.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
